--- a/index.html
+++ b/index.html
@@ -87,11 +87,8 @@
 
     <section style="grid-column: span 2;">
       <h2>Play of the Week</h2>
-      <form>
-        <input type="file" accept="video/*" />
-      </form>
       <video controls>
-        <source src="play_of_the_week.mp4" type="video/mp4">
+        <source src="c:\Users\dunca\Downloads\Clip.MP4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
     </section>
