--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <section style="grid-column: span 2;">
       <h2>Play of the Week</h2>
       <video controls>
-        <source src="c:\Users\dunca\Downloads\Clip.MP4" type="video/mp4">
+        <source src="https://github.com/PureToastyGG/PureToastyGG.github.io/raw/refs/heads/main/Clip.MP4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
     </section>
