--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
     <section>
       <h2>Leaderboard</h2>
       <ul>
-        <li>Cyclones : 0 - 0</li>
-        <li>Phantoms : 0 - 0</li>
-        <li>Dragons : 0 - 0</li>
-        <li>Kodiaks : 0 - 0</li>
-        <li>Knights : 0 - 0</li>
-        <li>Monarchs : 0 - 0</li>
-        <li>Bombers : 0 - 0</li>
+        <li>1) Cyclones : 0 - 0</li>
+        <li>2) Phantoms : 0 - 0</li>
+        <li>3) Dragons : 0 - 0</li>
+        <li>4) Kodiaks : 0 - 0</li>
+        <li>5) Knights : 0 - 0</li>
+        <li>6) Monarchs : 0 - 0</li>
+        <li>7) Bombers : 0 - 0</li>
       </ul>
     </section>
 
