--- a/index.html
+++ b/index.html
@@ -67,6 +67,14 @@
   </header>
 
   <main>
+      <section style="grid-column: span 2;">
+        <h2>Games This Week</h2>
+        <ul>
+          <li>Team Alpha vs Team Bravo - <em>Score: 3-2</em></li>
+          <li>Team Charlie vs Team Delta - <em>Score: TBD</em></li>
+          <li>Team Echo vs Team Foxtrot - <em>Score: TBD</em></li>
+        </ul>
+    </section>
     <section>
       <h2>News</h2>
       <p><strong>Week 0 Recap:</strong> Here we will post exciting news that happened during the week such as upsets or exceptional performances!</p>
