--- a/index.html
+++ b/index.html
@@ -68,11 +68,12 @@
 
   <main>
       <section style="grid-column: span 2;">
-        <h2>Games This Week</h2>
+        <h2>Week 1 Games:</h2>
         <ul>
-          <li>Team Alpha vs Team Bravo - <em>Score: 3-2</em></li>
-          <li>Team Charlie vs Team Delta - <em>Score: TBD</em></li>
-          <li>Team Echo vs Team Foxtrot - <em>Score: TBD</em></li>
+          <li>Team Cyclones vs Team Kodiaks - <em>Score: TBD</em></li>
+          <li>Team Phantoms vs Team Monarchs - <em>Score: TBD</em></li>
+          <li>Team Dragons vs Team Bombers - <em>Score: TBD</em></li>
+          <li>Bye Week: Team Knights </li>
         </ul>
     </section>
     <section>
