--- a/index.html
+++ b/index.html
@@ -67,37 +67,31 @@
   </header>
 
   <main>
-      <section style="grid-column: span 2;">
-        <h2>Week 1 Games:</h2>
-        <ul>
-          <li>Team Cyclones vs Team Kodiaks - <em>Score: TBD</em></li>
-          <li>Team Phantoms vs Team Monarchs - <em>Score: TBD</em></li>
-          <li>Team Dragons vs Team Bombers - <em>Score: TBD</em></li>
-          <li>Bye Week: Team Knights </li>
-        </ul>
-    </section>
     <section>
       <h2>News</h2>
-      <p><strong>Week 0 Recap:</strong> Here we will post exciting news that happened during the week such as upsets or exceptional performances!</p>
+      <p><strong>Week 1 Recap:</strong> For the first game of the season between the Knigths and the Monarchs we start with an exciting first game! The Knights snuck away with game one in a 2-1 overtime win. Then following this with an overwhelming performance ending the second game 8-2!</p>
     </section>
 
     <section>
       <h2>Leaderboard</h2>
       <ul>
-        <li>1) Cyclones : 0 - 0</li>
-        <li>2) Phantoms : 0 - 0</li>
-        <li>3) Dragons : 0 - 0</li>
-        <li>4) Kodiaks : 0 - 0</li>
-        <li>5) Knights : 0 - 0</li>
-        <li>6) Monarchs : 0 - 0</li>
-        <li>7) Bombers : 0 - 0</li>
+        <li>Knights : 1 - 0</li>
+        <li>Monarchs : 0 - 1</li>
+        <li>Cyclones : 0 - 0</li>
+        <li>Phantoms : 0 - 0</li>
+        <li>Dragons : 0 - 0</li>
+        <li>Kodiaks : 0 - 0</li>
+        <li>Bombers : 0 - 0</li>
       </ul>
     </section>
 
     <section style="grid-column: span 2;">
       <h2>Play of the Week</h2>
+      <form>
+        <input type="file" accept="video/*" />
+      </form>
       <video controls>
-        <source src="https://github.com/PureToastyGG/PureToastyGG.github.io/raw/refs/heads/main/Clip.MP4" type="video/mp4">
+        <source src="play_of_the_week.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
     </section>
@@ -106,27 +100,27 @@
       <div>
         <h2>Top Goals</h2>
         <ul>
-          <li>Gatman40 - 0</li>
-          <li>BurlierPython - 0</li>
-          <li>ArticSunset - 0</li>
+          <li>Gatman40 - 4</li>
+          <li>BurlierPython43 - 3</li>
+          <li>tnevjr - 3</li>
         </ul>
       </div>
 
       <div>
         <h2>Top Saves</h2>
         <ul>
-          <li>Gatman40 - 0</li>
-          <li>BurlierPython - 0</li>
-          <li>ArticSunset - 0</li>
+          <li>ButterMonkey2013 - 6</li>
+          <li>Gatman40 - 4</li>
+          <li>BurlierPython43 - 2</li>
         </ul>
       </div>
 
       <div>
         <h2>Top Assists</h2>
         <ul>
-          <li>Gatman40 - 0</li>
-          <li>BurlierPython - 0</li>
-          <li>ArticSunset - 0</li>
+          <li>BurlierPython43 - 3</li>
+          <li>Gatman40 - 2</li>
+          <li>tnevjr - 0</li>
         </ul>
       </div>
     </section>
