--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
     <h1>Rocket League Invintational</h1>
   </header>
 
+  <!--<section>
+    <h2>Last Weeks MVP</h2>
+    <p><strong>Gatman40</strong> - 4 goals, 2 assists, 4 saves</p>
+  !-->
   <main>
     <section>
       <h2>News</h2>
@@ -73,17 +77,21 @@
     </section>
 
     <section>
-      <h2>Leaderboard</h2>
+      <h2>This Weeks Matchups</h2>
       <ul>
-        <li>Knights : 1 - 0</li>
-        <li>Monarchs : 0 - 1</li>
-        <li>Cyclones : 0 - 0</li>
-        <li>Phantoms : 0 - 0</li>
-        <li>Dragons : 0 - 0</li>
-        <li>Kodiaks : 0 - 0</li>
-        <li>Bombers : 0 - 0</li>
+        <li>Knights Versus Monarchs: 2 - 0 (K)</li>
+        <li>Cyclones Versus Kodiaks: TBD</li>
+        <li>Dragons Versus Phantoms: TBD</li>
       </ul>
     </section>
+
+    <section>
+      <h2>Upcoming Matches</h2>
+      <ul>
+        <li>Knights Versus Monarchs: TBD</li>
+        <li>Cyclones Versus Kodiaks: TBD</li>
+        <li>Dragons Versus Phantoms: TBD</li>
+      </ul>
 
     <section style="grid-column: span 2;">
       <h2>Play of the Week</h2>
@@ -95,7 +103,8 @@
         Your browser does not support the video tag.
       </video>
     </section>
-
+    
+    
     <section class="leaderboards" style="grid-column: span 2;">
       <div>
         <h2>Top Goals</h2>
@@ -123,6 +132,19 @@
           <li>tnevjr - 0</li>
         </ul>
       </div>
+    </section>
+
+    <section>
+      <h2>This Weeks Matchups</h2>
+      <ul>
+        <li>Knights: 1 - 0</li>
+        <li>Cyclones: 0 - 0</li>
+        <li>Dragons: 0 - 0</li>
+        <li>Kodiaks: 0 - 0</li>
+        <li>Phantoms: 0 - 0</li>
+        <li>Monarchs: 0 - 1</li>
+      </ul>
+
     </section>
   </main>
 </body>
