--- a/Knights_Stats.html
+++ b/Knights_Stats.html
@@ -103,6 +103,13 @@
         Saves: 0
       </div>
     </section>
+
+    <section id="player-stats">
+        <h2>Star Player</h2>
+        <div class="player">
+          <strong>Gatman40</strong><br> 
+          <strong>Accolade: Striker (4 goals)</strong><br>
+      </section>
   </main>
 </body>
 </html>
