--- a/Monarchs_Stats.html
+++ b/Monarchs_Stats.html
@@ -6,8 +6,8 @@
   <title>Team Monarchs Stats Page</title>
   <style>
     :root {
-      --primary-color: #dd8b20; /* Edit this to change primary color */
-      --secondary-color: #989898; /* Edit this to change background color */
+      --primary-color: #f39e30; /* Edit this to change primary color */
+      --secondary-color: #acabab; /* Edit this to change background color */
       --text-color: #333;
     }
 
