--- a/Dragons_Stats.html
+++ b/Dragons_Stats.html
@@ -6,9 +6,9 @@
   <title>Team Dragons Stats Page</title>
   <style>
     :root {
-      --primary-color: #f9a537; /* Edit this to change primary color */
-      --secondary-color: #7b86ff; /* Edit this to change background color */
-      --text-color: #333;
+      --primary-color: #c47309; /* Edit this to change primary color */
+      --secondary-color: #2a349e; /* Edit this to change background color */
+      --text-color: #d7d7d7;
     }
 
     body {
