--- a/Kodiaks_Stats.html
+++ b/Kodiaks_Stats.html
@@ -6,8 +6,8 @@
   <title>Team Kodiaks Stats Page</title>
   <style>
     :root {
-      --primary-color: #fff23b; /* Edit this to change primary color */
-      --secondary-color: #44ddff; /* Edit this to change background color */
+      --primary-color: #481212; /* Edit this to change primary color */
+      --secondary-color: #83cedf; /* Edit this to change background color */
       --text-color: #141414;
     }
 
