--- a/Knights_Stats.html
+++ b/Knights_Stats.html
@@ -64,7 +64,7 @@
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="Team Logo">
+    <img src="images/knights_icon.png" alt="Team Logo">
   </header>
 
   <main>
