--- a/Monarchs_Stats.html
+++ b/Monarchs_Stats.html
@@ -25,7 +25,7 @@
     }
 
     header img {
-      max-height: 100px;
+      max-height: 250px;
     }
 
     main {
@@ -64,7 +64,7 @@
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="Team Logo">
+    <img src="images/monarchs_icon.png" alt="Team Logo">
   </header>
 
   <main>
