--- a/Phantoms_Stats.html
+++ b/Phantoms_Stats.html
@@ -25,7 +25,7 @@
     }
 
     header img {
-      max-height: 100px;
+      max-height: 250px;
     }
 
     main {
@@ -64,7 +64,7 @@
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="Team Logo">
+    <img src="images/phantoms_icon.png" alt="Team Logo">
   </header>
 
   <main>
@@ -85,7 +85,7 @@
     <section id="player-stats">
       <h2>Player Stats</h2>
       <div class="player">
-        <strong>Indyy</strong><br>
+        <strong>Jarzy</strong><br>
         Goals: 0<br>
         Assists: 0<br>
         Saves: 0
