--- a/Knights_Stats.html
+++ b/Knights_Stats.html
@@ -7,8 +7,8 @@
   <style>
     :root {
       --primary-color: #f91515; /* Edit this to change primary color */
-      --secondary-color: #f0f0f0; /* Edit this to change background color */
-      --text-color: #333;
+      --secondary-color: #bbbbbb; /* Edit this to change background color */
+      --text-color: #222222;
     }
 
     body {
