--- a/Dragons_Stats.html
+++ b/Dragons_Stats.html
@@ -6,8 +6,8 @@
   <title>Team Dragons Stats Page</title>
   <style>
     :root {
-      --primary-color: #c47309; /* Edit this to change primary color */
-      --secondary-color: #2a349e; /* Edit this to change background color */
+      --primary-color: #dd8716; /* Edit this to change primary color */
+      --secondary-color: #525dd8; /* Edit this to change background color */
       --text-color: #d7d7d7;
     }
 
