--- a/Dragons_Stats.html
+++ b/Dragons_Stats.html
@@ -7,7 +7,7 @@
   <style>
     :root {
       --primary-color: #dd8716; /* Edit this to change primary color */
-      --secondary-color: #525dd8; /* Edit this to change background color */
+      --secondary-color: #527cd8; /* Edit this to change background color */
       --text-color: #d7d7d7;
     }
 
