--- a/Kodiaks_Stats.html
+++ b/Kodiaks_Stats.html
@@ -8,7 +8,7 @@
     :root {
       --primary-color: #481212; /* Edit this to change primary color */
       --secondary-color: #83cedf; /* Edit this to change background color */
-      --text-color: #141414;
+      --text-color: #83cedf;
     }
 
     body {
