--- a/Dragons_Stats.html
+++ b/Dragons_Stats.html
@@ -8,7 +8,8 @@
     :root {
       --primary-color: #dd8716; /* Edit this to change primary color */
       --secondary-color: #527cd8; /* Edit this to change background color */
-      --text-color: #d7d7d7;
+      --text-color: #d7d7d7; 
+      --title-color: #2b2b2b
     }
 
     body {
@@ -37,8 +38,8 @@
     }
 
     h2 {
-      color: var(--primary-color);
-      border-bottom: 2px solid var(--primary-color);
+      color: var(--title-color);
+      border-bottom: 2px solid var(--title-color);
       padding-bottom: 5px;
     }
 
