--- a/Monarchs_Stats.html
+++ b/Monarchs_Stats.html
@@ -6,57 +6,44 @@
   <title>Team Monarchs Stats Page</title>
   <style>
     :root {
-      --primary-color: #f39e30; /* Edit this to change primary color */
-      --secondary-color: #acabab; /* Edit this to change background color */
+      --primary-color: #f39e30;
+      --secondary-color: #acabab;
       --text-color: #333;
     }
-
     body {
       margin: 0;
       font-family: Arial, sans-serif;
       background-color: var(--secondary-color);
       color: var(--text-color);
     }
-
     header {
       background-color: var(--primary-color);
       padding: 20px;
       text-align: center;
     }
-
     header img {
       max-height: 250px;
     }
-
     main {
       padding: 20px;
     }
-
     section {
       margin-bottom: 40px;
     }
-
     h2 {
       color: var(--primary-color);
       border-bottom: 2px solid var(--primary-color);
       padding-bottom: 5px;
     }
-
-    .match {
+    .match, .player {
       margin-bottom: 15px;
     }
-
-    .player {
-      margin-bottom: 15px;
-    }
-
     .video-link {
       display: inline-block;
       margin-top: 5px;
       color: var(--primary-color);
       text-decoration: none;
     }
-
     .video-link:hover {
       text-decoration: underline;
     }
@@ -84,32 +71,71 @@
 
     <section id="player-stats">
       <h2>Player Stats</h2>
-      <div class="player">
-        <strong>ButterMonkey2013</strong><br>
-        Goals: 2<br>
-        Assists: 0<br>
-        Saves: 6
-      </div>
-      <div class="player">
-        <strong>ethanrehm</strong><br>
-        Goals: 1<br>
-        Assists: 0<br>
-        Saves: 0
-      </div>
-      <div class="player">
-        <strong>Pooderhole</strong><br>
-        Goals: 0<br>
-        Assists: 0<br>
-        Saves: 0
-      </div>
+      <div id="stats-container"></div>
     </section>
 
-    <section id="player-stats">
-        <h2>Star Player</h2>
-        <div class="player">
-          <strong>ButterMonkey2013</strong><br> 
-          <strong>Accolade: Gaurdian (6 saves)</strong><br>
-      </section>
+    <section id="star-player">
+      <h2>Star Player</h2>
+      <div class="player" id="star-player-container"></div>
+    </section>
   </main>
+
+  <script>
+    const teamName = "Monarchs"; // Adjust this per team page
+
+    fetch("Raw Scarab Series stats - Week 1.csv")
+      .then(response => response.text())
+      .then(csv => {
+        const lines = csv.trim().split("\n");
+        const headers = lines[0].split(",");
+
+        const players = lines.slice(1)
+          .map(line => line.split(","))
+          .filter(row => row[1].trim() === teamName)
+          .map(row => ({
+            team: row[1],
+            player: row[0], 
+            points: parseInt(row[2], 10),
+            goals: parseInt(row[3], 10),
+            assists: parseInt(row[4], 10),
+            saves: parseInt(row[5], 10)
+          }));
+
+        const container = document.getElementById("stats-container");
+        players.forEach(p => {
+          const div = document.createElement("div");
+          div.className = "player";
+          div.innerHTML = `
+            <strong>${p.player}</strong><br>
+            Goals: ${p.goals}<br>
+            Assists: ${p.assists}<br>
+            Saves: ${p.saves}
+          `;
+          container.appendChild(div);
+        });
+
+        // Optional: Determine Star Player (highest points) 
+        if (players.length > 0) {
+          const star = players.reduce((top, p) => p.points > top.points ? p : top, players[0]); 
+          //Determine the top stat for accolade 
+          let accolade = ""; 
+          if (star.goals >= star.assists && star.goals >= star.saves){
+            accolade = "Striker";
+          } else if (star.assists >= star.gaols && star.assists >= star.saves){
+            accolade = "Playermaker";
+          } else if (star.saves >= star.goals && star.saves >= star.assists){
+            accolade = "Guardian";
+          }
+          
+          document.getElementById("star-player-container").innerHTML = `
+            <strong>${star.player}</strong><br>
+            <strong>Accolade: ${accolade} (${star.points} points)</strong><br>
+            Goals: ${star.goals}, Assists: ${star.assists}, Saves: ${star.saves}
+          `;
+      } else {
+        document.getElementById("star-player-container").innerHTML = "No player data found for Knights.";
+      }
+      });
+  </script>
 </body>
 </html>
