--- a/Monarchs_Stats.html
+++ b/Monarchs_Stats.html
@@ -133,7 +133,7 @@
             Goals: ${star.goals}, Assists: ${star.assists}, Saves: ${star.saves}
           `;
       } else {
-        document.getElementById("star-player-container").innerHTML = "No player data found for Knights.";
+        document.getElementById("star-player-container").innerHTML = "No player data found for Monarchs.";
       }
       });
   </script>
