--- a/Dragons_Stats.html
+++ b/Dragons_Stats.html
@@ -72,7 +72,7 @@
     <section id="match-history">
       <h2>Match History</h2>
       <div class="match">
-        <strong>Opponent:</strong> Knights<br>
+        <strong>Opponent:</strong> Phantoms<br>
         <strong>Score:</strong> 0-2<br>
         <a class="video-link" href="https://example.com/video1" target="_blank">Watch Game</a>
       </div>
