--- a/Kodiaks_Stats.html
+++ b/Kodiaks_Stats.html
@@ -71,8 +71,8 @@
     <section id="match-history">
       <h2>Match History</h2>
       <div class="match">
-        <strong>Opponent:</strong> Dragons<br>
-        <strong>Score:</strong> 0-0<br>
+        <strong>Opponent:</strong> Cyclones<br>
+        <strong>Score:</strong> 2-0<br>
         <a class="video-link" href="https://example.com/video1" target="_blank">Watch Game</a>
       </div>
       <div class="match">
