--- a/index.html
+++ b/index.html
@@ -85,24 +85,24 @@
   <main>
     <section>
       <h2>News</h2>
-      <p><strong>Week 1 Recap:</strong> For the first game of the season between the Knights and the Monarchs we start with an exciting first game! The Knights snuck away with game one in a 2-1 overtime win. Then following this with an overwhelming performance ending the second game 8-2!</p>
+      <p><strong>Week 1 Recap:</strong> Although it took some time to figure out all the results are in. None of this weeks games went to three as we had many teams pull off decisive wins. The Knights and Monarchs game 1 went to overtime with a Knights win and the Knights kept that momentum winning game 2 by a landslide. Similarly, the Kodiaks had a tight first game with the Cyclones but turned the heat up dramatically for game 2. Lastly, a much closer series but still a 2-0 win for the Phantoms against the Dragons. </p>
     </section>
 
     <section>
       <h2>This Week's Matchups</h2>
       <ul>
         <li>Knights Versus Monarchs: 2 - 0 (K)</li>
-        <li>Cyclones Versus Kodiaks: TBD</li>
-        <li>Dragons Versus Phantoms: TBD</li>
+        <li>Cyclones Versus Kodiaks: 0 - 2</li>
+        <li>Dragons Versus Phantoms: 0 - 2</li>
       </ul>
     </section>
 
     <section>
       <h2>Upcoming Matches</h2>
       <ul>
-        <li>Knights Versus Monarchs: TBD</li>
-        <li>Cyclones Versus Kodiaks: TBD</li>
-        <li>Dragons Versus Phantoms: TBD</li>
+        <li>Knights Versus Kodiaks: TBD</li>
+        <li>Cyclones Versus Phantoms: TBD</li>
+        <li>Monarchs Versus Dragons: TBD</li>
       </ul>
     </section>
 
@@ -118,9 +118,9 @@
       <div>
         <h2>Top Goals</h2>
         <ul>
+          <li>Jarzy - 6</li>
           <li>Gatman40 - 4</li>
-          <li>BurlierPython43 - 3</li>
-          <li>tnevjr - 3</li>
+          <li>TheReal2BeaR - 4</li>
         </ul>
       </div>
 
@@ -128,17 +128,17 @@
         <h2>Top Saves</h2>
         <ul>
           <li>ButterMonkey2013 - 6</li>
-          <li>Gatman40 - 4</li>
-          <li>BurlierPython43 - 2</li>
+          <li>Jarzy - 6</li>
+          <li>Madbrash2 - 4</li>
         </ul>
       </div>
 
       <div>
         <h2>Top Assists</h2>
         <ul>
+          <li>xan der r - 4</li>
           <li>BurlierPython43 - 3</li>
-          <li>Gatman40 - 2</li>
-          <li>tnevjr - 0</li>
+          <li>pHD Ducky9124 - 2</li>
         </ul>
       </div>
     </section>
@@ -147,11 +147,11 @@
       <h2>Team Standings</h2>
       <ul>
         <li><a href="Knights_Stats.html">Knights</a>: 1 - 0</li>
-        <li><a href="Cyclones_Stats.html">Cyclones</a>: 0 - 0</li>
-        <li><a href="Dragons_Stats.html">Dragons</a>: 0 - 0</li>
-        <li><a href="Kodiaks_Stats.html">Kodiaks</a>: 0 - 0</li>
-        <li><a href="Phantoms_Stats.html">Phantoms</a>: 0 - 0</li>
+        <li><a href="Phantoms_Stats.html">Phantoms</a>: 1 - 0</li>
+        <li><a href="Kodiaks_Stats.html">Kodiaks</a>: 1 - 0</li>
+        <li><a href="Cyclones_Stats.html">Cyclones</a>: 0 - 1</li>
         <li><a href="Monarchs_Stats.html">Monarchs</a>: 0 - 1</li>
+        <li><a href="Dragons_Stats.html">Dragons</a>: 0 - 1</li>
       </ul>
     </section>
   </main>
