--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <section>
       <h2>This Week's Matchups</h2>
       <ul>
-        <li>Knights Versus Monarchs: 2 - 0 (K)</li>
+        <li>Knights Versus Monarchs: 2 - 0</li>
         <li>Cyclones Versus Kodiaks: 0 - 2</li>
         <li>Dragons Versus Phantoms: 0 - 2</li>
       </ul>
