--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
       </ul>
     </section>
 
-    <section>
+    <!-- <section>
       <h2>Play of the Week</h2>
       <video controls>
         <source src="play_of_the_week.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
-    </section>
+    </section> -->
 
     <section class="leaderboards">
       <div>
