--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <main>
     <section>
       <h2>News</h2>
-      <p><strong>Week 1 Recap:</strong> Although it took some time to figure out all the results are in. None of this weeks games went to three as we had many teams pull off decisive wins. The Knights and Monarchs game 1 went to overtime with a Knights win and the Knights kept that momentum winning game 2 by a landslide. Similarly, the Kodiaks had a tight first game with the Cyclones but turned the heat up dramatically for game 2. Lastly, a much closer series but still a 2-0 win for the Phantoms against the Dragons. </p>
+      <p><strong>Week 1 Recap:</strong> Although it took some time, all the results are in. None of this week's games went to three, as we had many teams pull off decisive wins. The Knights and Monarchs game 1 went to overtime with a Knights win, and the Knights kept that momentum, winning game 2 by a landslide. Similarly, the Kodiaks had a tight first game with the Cyclones but turned the heat up dramatically for game 2. The last game was a much closer series, but still a 2-0 win for the Phantoms against the Dragons.</p>
     </section>
 
     <section>
