--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
   <main>
     <section>
       <h2>News</h2>
-      <p><strong>Week 1 Recap:</strong> Although it took some time, all the results are in. None of this week's games went to three, as we had many teams pull off decisive wins. The Knights and Monarchs game 1 went to overtime with a Knights win, and the Knights kept that momentum, winning game 2 by a landslide. Similarly, the Kodiaks had a tight first game with the Cyclones but turned the heat up dramatically for game 2. The last game was a much closer series, but still a 2-0 win for the Phantoms against the Dragons.</p>
+      <p><strong>Week 2 Update:</strong> The first game of week 2 was played where the first-seed Knights took on the sixth-seed Cyclones. With a close 1 - 0 win for the Knights in game 1. However, game 2 was far less close, with a 4 - 0 win for the Knights to end the series led by BurlierPython43, who scored all their goals in the second game.</p>
     </section>
 
     <section>
-      <h2>This Week's Matchups</h2>
+      <h2>Last Week's Matchups</h2>
       <ul>
         <li>Knights Versus Monarchs: 2 - 0</li>
         <li>Cyclones Versus Kodiaks: 0 - 2</li>
@@ -98,11 +98,11 @@
     </section>
 
     <section>
-      <h2>Upcoming Matches</h2>
+      <h2>This Week's Matchups</h2>
       <ul>
-        <li>Knights Versus Kodiaks: TBD</li>
-        <li>Cyclones Versus Phantoms: TBD</li>
-        <li>Monarchs Versus Dragons: TBD</li>
+        <li>Knights(1) Versus Cyclones(6): 2 - 0</li>
+        <li>Dragons(4) Versus Monarchs(5): TBD</li>
+        <li>Phantoms(2) Versus Kodiaks(3): TBD</li>
       </ul>
     </section>
 
@@ -146,12 +146,12 @@
     <section>
       <h2>Team Standings</h2>
       <ul>
-        <li><a href="Knights_Stats.html">Knights</a>: 1 - 0</li>
+        <li><a href="Knights_Stats.html">Knights</a>: 2 - 0</li>
         <li><a href="Phantoms_Stats.html">Phantoms</a>: 1 - 0</li>
         <li><a href="Kodiaks_Stats.html">Kodiaks</a>: 1 - 0</li>
-        <li><a href="Cyclones_Stats.html">Cyclones</a>: 0 - 1</li>
-        <li><a href="Monarchs_Stats.html">Monarchs</a>: 0 - 1</li>
         <li><a href="Dragons_Stats.html">Dragons</a>: 0 - 1</li>
+        <li><a href="Cyclones_Stats.html">Cyclones</a>: 0 - 2</li>
+        <li><a href="Monarchs_Stats.html">Monarchs</a>: 0 - 1</li>
       </ul>
     </section>
   </main>
