--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <main>
     <section>
       <h2>News</h2>
-      <p><strong>Week 2 Update:</strong> The first game of week 2 was played where the first-seed Knights took on the sixth-seed Cyclones. With a close 1 - 0 win for the Knights in game 1. However, game 2 was far less close, with a 4 - 0 win for the Knights to end the series led by BurlierPython43, who scored all their goals in the second game.</p>
+      <p><strong>Week 2 Update:</strong> Week two just ended with a lot of exciting matchups so here's the summary. Knights(1) won against Cyclones(6) breaking away in the second game. Dragons(4) came back after losing the first game against the Monarchs(5). Kodiaks(3) were able to beat Phantoms(2) after two very close games. Other housekeeping update is leaderboards are going to be based on stats per game so there is no advantage to playing a third game.</p>
     </section>
 
     <section>
@@ -101,8 +101,8 @@
       <h2>This Week's Matchups</h2>
       <ul>
         <li>Knights(1) Versus Cyclones(6): 2 - 0</li>
-        <li>Dragons(4) Versus Monarchs(5): TBD</li>
-        <li>Phantoms(2) Versus Kodiaks(3): TBD</li>
+        <li>Dragons(4) Versus Monarchs(5): 2 - 1</li>
+        <li>Phantoms(2) Versus Kodiaks(3): 0 - 2</li>
       </ul>
     </section>
 
@@ -147,11 +147,11 @@
       <h2>Team Standings</h2>
       <ul>
         <li><a href="Knights_Stats.html">Knights</a>: 2 - 0</li>
-        <li><a href="Phantoms_Stats.html">Phantoms</a>: 1 - 0</li>
-        <li><a href="Kodiaks_Stats.html">Kodiaks</a>: 1 - 0</li>
-        <li><a href="Dragons_Stats.html">Dragons</a>: 0 - 1</li>
+        <li><a href="Kodiaks_Stats.html">Kodiaks</a>: 2 - 0</li>
+        <li><a href="Phantoms_Stats.html">Phantoms</a>: 1 - 1</li>
+        <li><a href="Dragons_Stats.html">Dragons</a>: 1 - 1</li>
+        <li><a href="Monarchs_Stats.html">Monarchs</a>: 0 - 2</li>
         <li><a href="Cyclones_Stats.html">Cyclones</a>: 0 - 2</li>
-        <li><a href="Monarchs_Stats.html">Monarchs</a>: 0 - 1</li>
       </ul>
     </section>
   </main>
