--- a/index.html
+++ b/index.html
@@ -116,29 +116,29 @@
 
     <section class="leaderboards">
       <div>
-        <h2>Top Goals</h2>
+        <h2>Best Scorers (PPG)</h2>
         <ul>
-          <li>Jarzy - 6</li>
-          <li>Gatman40 - 4</li>
-          <li>TheReal2BeaR - 4</li>
+          <li>BurlierPython43 - 1.75</li>
+          <li>Jarzy - 1.75</li>
+          <li>PureToastyGG - 1.60</li>
         </ul>
       </div>
 
       <div>
-        <h2>Top Saves</h2>
+        <h2>Best Defense (SPG)</h2>
         <ul>
-          <li>ButterMonkey2013 - 6</li>
-          <li>Jarzy - 6</li>
-          <li>Madbrash2 - 4</li>
+          <li>Madbrash2 - 2.50</li>
+          <li>Jarzy - 2</li>
+          <li>ButterMonkey2013 - 1.60</li>
         </ul>
       </div>
 
       <div>
-        <h2>Top Assists</h2>
+        <h2>Best Passers (APG)</h2>
         <ul>
-          <li>xan der r - 4</li>
-          <li>BurlierPython43 - 3</li>
-          <li>pHD Ducky9124 - 2</li>
+          <li>Gatman40 - 0.75</li>
+          <li>BurlierPython43 - 0.75</li>
+          <li>pHD Squirtle - 0.75</li>
         </ul>
       </div>
     </section>
