--- a/Dragons_Stats.html
+++ b/Dragons_Stats.html
@@ -97,7 +97,7 @@
   <script>
     const teamName = "Dragons"; // Adjust this per team page
 
-    fetch("Raw Scarab Series stats - Week 1.csv")
+    fetch("TSS Stats.csv")
       .then(response => response.text())
       .then(csv => {
         const lines = csv.trim().split("\n");
