--- a/Phantoms_Stats.html
+++ b/Phantoms_Stats.html
@@ -96,7 +96,7 @@
   <script>
     const teamName = "Phantoms"; // Adjust this per team page
 
-    fetch("Raw Scarab Series stats - Week 1.csv")
+    fetch("TSS Stats.csv")
       .then(response => response.text())
       .then(csv => {
         const lines = csv.trim().split("\n");
