--- a/index.html
+++ b/index.html
@@ -151,7 +151,8 @@
         <li><a href="Phantoms_Stats.html">Phantoms</a>: 1 - 1</li>
         <li><a href="Dragons_Stats.html">Dragons</a>: 1 - 1</li>
         <li><a href="Monarchs_Stats.html">Monarchs</a>: 0 - 2</li>
-        <li><a href="Cyclones_Stats.html">Cyclones</a>: 0 - 2</li>
+        <li><a href="Cyclones_Stats.html">Cyclones</a>: 0 - 2</li> 
+        <li>< a href="All_Player_Stats.html">Player Stats</a></li>
       </ul>
     </section>
   </main>
