--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     }
 
     section {
-      background-color: #1f2833;
+      background-color: #E0E0E0;
       padding: 1em;
       border-radius: 10px;
     }
@@ -68,7 +68,7 @@
     }
 
     a {
-      color: #66fcf1;
+      color: #C0C0C0;
       text-decoration: none;
     }
 
