--- a/All_Player_Stats.html
+++ b/All_Player_Stats.html
@@ -9,53 +9,59 @@
     <select id="playerSelect"></select>
     <div id="playerInfo"></div>
 
-    <script>
-        let players = {};
+<script>
+    let players = {};
 
-        // Replace this URL with the raw URL to your CSV file in your GitHub repo
-        const csvUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vTFSfsN0j7nIfzYdwnkS_i1-Ydzvykg65MhlzB0zGw_gAwZDwlbjfFYTBkRCLoRiuhT2jD4RfFv4nad/pub?gid=0&single=true&output=csv';
+    // Replace this URL with the raw URL to your CSV file in your GitHub repo
+    const csvUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vTFSfsN0j7nIfzYdwnkS_i1-Ydzvykg65MhlzB0zGw_gAwZDwlbjfFYTBkRCLoRiuhT2jD4RfFv4nad/pub?gid=0&single=true&output=csv';
 
-        fetch(csvUrl)
-            .then(response => response.text())
-            .then(csvText => {
-                Papa.parse(csvText, {
-                    header: true,
-                    complete: function(results) {
-                        players = {};
-                        const select = document.getElementById('playerSelect');
-                        select.innerHTML = '';
-                        results.data.forEach(row => {
-                            if (row.Player) {
-                                players[row.player] = row;
-                                const option = document.createElement('option');
-                                option.value = row.Player;
-                                option.textContent = row.Player;
-                                select.appendChild(option);
-                            }
+    fetch(csvUrl)
+        .then(response => response.text())
+        .then(csvText => {
+            Papa.parse(csvText, {
+                header: true,
+                complete: function(results) {
+                    players = {};
+                    const select = document.getElementById('playerSelect');
+                    select.innerHTML = '';
+                    results.data.forEach(row => {
+                        // Normalize keys
+                        const normalized = {};
+                        Object.keys(row).forEach(key => {
+                            normalized[key.trim().toLowerCase()] = row[key];
                         });
-                        if (select.options.length > 0) {
-                            select.selectedIndex = 0;
-                            select.dispatchEvent(new Event('change'));
+                        if (normalized.player) {
+                            players[normalized.player] = normalized;
+                            const option = document.createElement('option');
+                            option.value = normalized.player;
+                            option.textContent = normalized.player;
+                            select.appendChild(option);
                         }
+                    });
+                    // Automatically select the first player if available
+                    if (select.options.length > 0) {
+                        select.selectedIndex = 0;
+                        select.dispatchEvent(new Event('change'));
                     }
-                });
+                }
             });
-
-        document.getElementById('playerSelect').addEventListener('change', function() {
-            const selected = this.value;
-            const info = players[selected];
-            if (info) {
-                document.getElementById('playerInfo').innerHTML =
-                    `<h2>${info.Player}</h2>
-                    <p>Team: ${info.Team}</p>
-                    <p>Points: ${info.Points}</p>
-                    <p>Goals: ${info.Goals}</p>
-                    <p>Assists: ${info.Assists}</p>
-                    <p>Saves: ${info.Saves}</p>`;
-            } else {
-                document.getElementById('playerInfo').innerHTML = '';
-            }
         });
-    </script>
+
+    document.getElementById('playerSelect').addEventListener('change', function() {
+        const selected = this.value;
+        const info = players[selected];
+        if (info) {
+            document.getElementById('playerInfo').innerHTML =
+                `<h2>${info.player}</h2>
+                <p>Team: ${info.team}</p>
+                <p>Points: ${info.points}</p>
+                <p>Goals: ${info.goals}</p>
+                <p>Assists: ${info.assists}</p>
+                <p>Saves: ${info.saves}</p>`;
+        } else {
+            document.getElementById('playerInfo').innerHTML = '';
+        }
+    });
+</script>
 </body>
 </html>
