--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background-color: #0b0c10;
+      background-color: #FFFFFF;
       color: white;
     }
 
@@ -16,7 +16,7 @@
       background-color: #1f2833;
       padding: 1em;
       text-align: center;
-      color: #45a29e;
+      color: #404040;
     }
 
     main {
@@ -35,7 +35,7 @@
     }
 
     h2 {
-      color: #45a29e;
+      color: #404040;
       border-bottom: 2px solid #66fcf1;
       padding-bottom: 0.5em;
     }
@@ -68,7 +68,7 @@
     }
 
     a {
-      color: #C0C0C0;
+      color: #0066CC;
       text-decoration: none;
     }
 
