--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       margin: 0;
       font-family: Arial, sans-serif;
       background-color: #FFFFFF;
-      color: white;
+      color: 202020;
     }
 
     header {
@@ -69,11 +69,11 @@
 
     a {
       color: #0066CC;
-      text-decoration: none;
+      text-decoration: underline;
     }
 
     a:hover {
-      text-decoration: underline;
+      text-decoration: bold;
     }
   </style>
 </head>
