--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rocket League Invitational Updates</title>
+  <title>The Scarab Series</title>
   <style>
     body {
       margin: 0;
@@ -36,7 +36,7 @@
 
     h2 {
       color: #404040;
-      border-bottom: 2px solid #66fcf1;
+      border-bottom: 2px solid #FF8000;
       padding-bottom: 0.5em;
     }
 
@@ -47,7 +47,7 @@
 
     li {
       padding: 0.5em 0;
-      border-bottom: 1px solid #45a29e;
+      border-bottom: 1px solid #FF8000;
     }
 
     .leaderboards {
