--- a/index.html
+++ b/index.html
@@ -34,9 +34,14 @@
       border-radius: 10px;
     }
 
-    h2 {
+    h1 {
       color: #404040;
       border-bottom: 2px solid #FF8000;
+      padding-bottom: 0.5em;
+    } 
+
+    h2 {
+      color: #606060;
       padding-bottom: 0.5em;
     }
 
@@ -73,16 +78,29 @@
     }
 
     a:hover {
-      text-decoration: bold;
+      text-decoration-thickness: 2px;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>Rocket League Invitational</h1>
+    <nav> 
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="Knights_Stats.html">Knights</a></li>
+        <li><a href="Kodiaks_Stats.html">Kodiaks</a></li>
+        <li><a href="Phantoms_Stats.html">Phantoms</a></li>
+        <li><a href="Dragons_Stats.html">Dragons</a></li>
+        <li><a href="Monarchs_Stats.html">Monarchs</a></li>
+        <li><a href="Cyclones_Stats.html">Cyclones</a></li>
+        <li><a href="All_Player_Stats.html">Player Stats</a></li>
+      </ul>
+    </nav>
   </header>
 
   <main>
+    <h1>The Scarab Series</h1>
+    <h2>Season 0</h2>
     <section>
       <h2>News</h2>
       <p><strong>Week 2 Update:</strong> Week two just ended with a lot of exciting matchups so here's the summary. Knights(1) won against Cyclones(6) breaking away in the second game. Dragons(4) came back after losing the first game against the Monarchs(5). Kodiaks(3) were able to beat Phantoms(2) after two very close games. Other housekeeping update is leaderboards are going to be based on stats per game so there is no advantage to playing a third game.</p>
@@ -144,15 +162,11 @@
     </section>
 
     <section>
-      <h2>Team Standings</h2>
+      <h2>Top 3 Teams</h2>
       <ul>
         <li><a href="Knights_Stats.html">Knights</a>: 2 - 0</li>
         <li><a href="Kodiaks_Stats.html">Kodiaks</a>: 2 - 0</li>
         <li><a href="Phantoms_Stats.html">Phantoms</a>: 1 - 1</li>
-        <li><a href="Dragons_Stats.html">Dragons</a>: 1 - 1</li>
-        <li><a href="Monarchs_Stats.html">Monarchs</a>: 0 - 2</li>
-        <li><a href="Cyclones_Stats.html">Cyclones</a>: 0 - 2</li> 
-        <li><a href="All_Player_Stats.html">Player Stats</a></li>
       </ul>
     </section>
   </main>
