--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Scarab Series</title>
   <style>
+    nav ul {
+      display: flex;
+      flex-direction: row;
+      justify-content: center; /* optional: centers the nav */
+      gap: 2em;                /* optional: space between links */
+      list-style: none;        /* removes bullets */
+      padding: 0;
+      margin: 0;
+    }
+
+    nav li {
+      border-bottom: none;     /* removes the orange line under each link */
+      padding: 0;
+    }
+    
     body {
       margin: 0;
       font-family: Arial, sans-serif;
