--- a/All_Player_Stats.html
+++ b/All_Player_Stats.html
@@ -53,6 +53,7 @@
         if (info) {
             document.getElementById('playerInfo').innerHTML =
                 `<h2>${info.player}</h2>
+                <p>Stars: ${info.stars}</p>
                 <p>Team: ${info.team}</p>
                 <p>Points: ${info.points}</p>
                 <p>Goals: ${info.goals}</p>
