--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       border-bottom: none;     /* removes the orange line under each link */
       padding: 0;
     }
-    
+
     body {
       margin: 0;
       font-family: Arial, sans-serif;
@@ -51,13 +51,15 @@
 
     h1 {
       color: #404040;
-      border-bottom: 2px solid #FF8000;
-      padding-bottom: 0.5em;
+      border-bottom: 2px solid #0066CC;
+      padding-bottom: 0.5em; 
+      text-align: center;
     } 
 
     h2 {
       color: #606060;
-      padding-bottom: 0.5em;
+      padding-bottom: 0.5em; 
+      text-align: center;
     }
 
     ul {
@@ -67,7 +69,7 @@
 
     li {
       padding: 0.5em 0;
-      border-bottom: 1px solid #FF8000;
+      border-bottom: 1px solid #0066CC;
     }
 
     .leaderboards {
